2000-06-16  Bruno Haible  <haible@clisp.cons.org>

	* codeset.m4: New file, taken from fileutils-4.0u, with prefix AM.
	* iconv.m4: New file, taken from fileutils-4.0u, with prefix AM.
	* gettext.m4 (AM_GNU_GETTEXT): Add check for headers <stddef.h>,
	<stdlib.h>. Add check for functions feof_unlocked, fgets_unlocked.
	Invoke AM_ICONV and AM_LANGINFO_CODESET. Require AC_CANONICAL_HOST.
	Bump to serial 7.

	* isc-posix.m4: Undefine the macro before calling AC_DEFUN, otherwise
	with autoconf-2.13 we get lots of ***BUG in Autoconf--please report***
	errors.

2000-05-06  Ulrich Drepper  <drepper@redhat.com>

	* gettext.m4: Add tests for tsearch, iconv, and mempcpy.

	* gettext.m4: Lots of bug fixes.

1998-06-01 22:28  Ulrich Drepper  <drepper@cygnus.com>

	* gettext.m4: Allow arguments for AM_GNU_GETTEXT to customize for
	Cygnus trees.

1998-04-30  Ulrich Drepper  <drepper@cygnus.com>

	* gettext.m4: Add AC_OUTPUT_COMMANDS in AM_GNU_GETTEXT to rewrite
	the po/Makefile.

1998-04-29  Ulrich Drepper  <drepper@cygnus.com>

	* Makefile.am (EXTRA_DIST): No need to mention *.m4 files here.

	* gettext.m4: Fix test for gettext in libintl.
	Patch by Guido Flohr <gufl0000@stud.uni-sb.de>.

1998-04-28  Ulrich Drepper  <drepper@cygnus.com>

	* gettext.m4: Don't test for values.h.

1998-04-27 21:17  Ulrich Drepper  <drepper@cygnus.com>

	* gettext.m4, lcmessage.m4, progtest.m4: Moved to here from toplevel.