@@ -1,3 +1,8 @@
+2000-07-28  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext.m4 (AM_GNU_GETTEXT): The sed scripts are in $srcdir/intl,
+	and po2msg.sed, po2tbl.sed must be created in the intl subdir.
+
 2000-06-16  Bruno Haible  <haible@clisp.cons.org>
 
 	* codeset.m4: New file, taken from fileutils-4.0u, with prefix AM.
